ESURVEY-6733 creation, answering and first draft of results working

--- a/src/main/webapp/WEB-INF/classes/messages_en.properties
+++ b/src/main/webapp/WEB-INF/classes/messages_en.properties
@@ -380,6 +380,7 @@ info.noNegativeScore = If the participant selected anwers with negative points, 
 info.NotAllCorrectAnswers = Not all correct answers selected
 info.NoTriggersFound = There are no other elements in the survey that could trigger this element.
 info.OPC = Predefined settings for BRP Public Consultation surveys
+info.ECF = Predefined settings for ECF Self-Assessment Tool
 info.OperationExecuted = The operation has been executed.
 info.OperationStarted = The operation has been started. Please wait.
 info.Order = <b>Original</b> - Keep the order of the answers<br /><b>Alphabetical</b> - Answers will be ordered alphabetically in the respective translation<br /><b>Random</b> - Answers will be ordered randomly
@@ -1219,6 +1220,7 @@ label.others = others
 label.OldPassword = Old Password
 label.OldValue = Old value
 label.OPC = BRP Public Consultation
+label.ECF = ECF Self Assessment Tool
 label.OPCsmall = BRP
 label.Open = Open
 label.OpenDraft = Open Draft
@@ -1580,6 +1582,8 @@ label.TotalMeanScore = Total Mean Score
 label.TotalMeanScorePerSection = Total Mean Score per Section
 label.TotalScore = Total Score
 label.TotalScores = Total Scores
+label.ECF.Big = ECF Public Procurement Self-Assessment
+label.ECF.Results = Individual Assessment Results and Gaps
 label.Tutorial = Tutorial
 label.Type = Type
 label.UnavailabilityPage = Unavailability Page
@@ -2348,7 +2352,7 @@ label.un.Colombia = Colombia
 label.un.Comoros = Comoros
 label.un.Congo = Congo
 label.un.CostaRica = Costa Rica
-label.un.CoteDIvoire = Côte D'Ivoire
+label.un.CoteDIvoire = Cï¿½te D'Ivoire
 label.un.Croatia = Croatia
 label.un.Cuba = Cuba
 label.un.Cyprus = Cyprus
