ESURVEY-6733 working for demo

--- a/src/main/webapp/WEB-INF/classes/messages_en.properties
+++ b/src/main/webapp/WEB-INF/classes/messages_en.properties
@@ -1237,6 +1237,8 @@ label.OldPassword = Old Password
 label.OldValue = Old value
 label.OPC = BRP Public Consultation
 label.ECF = ECF Self Assessment Tool
+label.ECF.DisplayScores = Display scores
+label.ECF.DisplayGaps = Display gaps
 label.OPCsmall = BRP
 label.Open = Open
 label.OpenDraft = Open Draft
@@ -1603,6 +1605,31 @@ label.TotalScore = Total Score
 label.TotalScores = Total Scores
 label.ECF.Big = ECF Public Procurement Self-Assessment
 label.ECF.Results = Individual Assessment Results and Gaps
+label.ECF.Results2 = Profile Assessment Results and Gaps
+label.ECF.Results3 = Organizational gaps
+label.ECF.NbInviduals = Number of answerers
+label.ECF.Competencies = Competencies
+label.ECF.AnswerScore = Answer Score
+label.ECF.Scores = Scores
+label.ECF.Target = Target score
+label.ECF.PleaseFindResults = Here are your results:
+label.ECF.Average = Average score
+label.ECF.AverageTarget = Average target
+label.ECF.Max = Max
+label.ECF.MaxTarget = Max target
+label.ECF.DisplayOptions = Display options:
+label.ECF.ProfileFilter = Profile Filter:
+label.ECF.SortBy = Sort by:
+label.ECFProperties = ECF Properties
+label.ECFProfileSelection = ECF Profile selection question
+label.ECFCompetencyQuestion = ECF Competency question
+label.ECFSelectedCompetency = Selected ECF Competency
+label.ECF.SortByNameAsc = Alphabetical order A...Z
+label.ECF.SortByNameDesc = Alphabetical order Z...A
+label.ECF.SortByScoreDesc = Highest score
+label.ECF.SortByScoreAsc = Lowest score
+label.ECF.SortByGapDesc = Highest gap
+label.ECF.SortByGapAsc = Lowest gap
 label.Tutorial = Tutorial
 label.Type = Type
 label.UnavailabilityPage = Unavailability Page
