--- a/src/main/webapp/WEB-INF/classes/messages_en.properties
+++ b/src/main/webapp/WEB-INF/classes/messages_en.properties
@@ -1585,11 +1585,12 @@ label.TotalMeanScorePerSection = Total Mean Score per Section
 label.TotalScore = Total Score
 label.TotalScores = Total Scores
 label.ECF.Big = ECF Public Procurement Self-Assessment
-label.ECF.Results = Individual Assessment Results and Gaps
+label.ECF.Results = Individual Assessment Results and gaps
 label.ECF.Results2 = Profile Assessment Results and Gaps
-label.ECF.Results3 = Organizational gaps
+label.ECF.Results3 = Average and Maximum score for all profiles
 label.ECF.NbInviduals = Number of answerers
 label.ECF.Competencies = Competencies
+label.ECF.Competence = Competence
 label.ECF.AnswerScore = Answer Score
 label.ECF.Scores = Scores
 label.ECF.Target = Target score
@@ -1598,10 +1599,13 @@ label.ECF.Average = Average score
 label.ECF.AverageTarget = Average target
 label.ECF.Max = Max
 label.ECF.MaxTarget = Max target
+label.ECF.SelectContributions = Select contributions:
 label.ECF.DisplayOptions = Display options:
-label.ECF.ProfileFilter = Profile Filter:
+label.ECF.ProfileFilter = Select target profile:
 label.ECF.SortBy = Sort by:
 label.ECFProperties = ECF Properties
+label.ECF.Profile = Profile
+label.ECF.NumberOfContributions = #Contributions
 label.ECFProfileSelection = ECF Profile selection question
 label.ECFCompetencyQuestion = ECF Competency question
 label.ECFSelectedCompetency = Selected ECF Competency
