--- a/src/main/webapp/WEB-INF/classes/messages_en.properties
+++ b/src/main/webapp/WEB-INF/classes/messages_en.properties
@@ -389,7 +389,7 @@ info.NotAllCorrectAnswers = Not all correct answers selected
 info.NoSharedSurveys = There are no surveys shared with you.
 info.NoTriggersFound = There are no other elements in the survey that could trigger this element.
 info.OPC = Predefined settings for BRP Public Consultation surveys
-info.ECF = Predefined settings for ECF Self-Assessment Tool
+info.ECF = Predefined settings for ECF Self-Assessment
 info.OperationExecuted = The operation has been executed.
 info.OperationStarted = The operation has been started. Please wait.
 info.Order = <b>Original</b> - Keep the order of the answers<br /><b>Alphabetical</b> - Answers will be ordered alphabetically in the respective translation<br /><b>Random</b> - Answers will be ordered randomly
@@ -1235,7 +1235,7 @@ label.others = others
 label.OldPassword = Old Password
 label.OldValue = Old value
 label.OPC = BRP Public Consultation
-label.ECF = ECF Self Assessment Tool
+label.ECF = ECF Self Assessment
 label.ECF.DisplayScores = Display scores
 label.ECF.DisplayGaps = Display gaps
 label.OPCsmall = BRP
@@ -1611,7 +1611,7 @@ label.ECF.NbInviduals = Number of answerers
 label.ECF.Competencies = Competencies
 label.ECF.Competence = Competence
 label.ECF.AnswerScore = Answer Score
-label.ECF.Scores = Scores
+label.ECF.Scores = Score (Gap)
 label.ECF.Target = Target score
 label.ECF.PleaseFindResults = Here are your results:
 label.ECF.Average = Average score
@@ -1619,6 +1619,7 @@ label.ECF.AverageTarget = Average target
 label.ECF.Max = Max
 label.ECF.MaxTarget = Max target
 label.ECF.SelectContributions = Select contributions:
+label.ECF.DisplayContributions = Number of contributions per profile:
 label.ECF.DisplayOptions = Display options:
 label.ECF.ProfileFilter = Select target profile:
 label.ECF.SortBy = Sort by:
