ESURVEY-6733: Adding export to Xls

--- a/src/main/webapp/WEB-INF/classes/messages_en.properties
+++ b/src/main/webapp/WEB-INF/classes/messages_en.properties
@@ -1596,6 +1596,7 @@ label.Token/Contacts/Department = Token/Contacts/Department
 label.Tokens = Tokens
 label.Toolbox = Toolbox
 label.ToPublish = To Publish
+label.TotalUpperCase = TOTAL
 label.TotalPoints = Total Points
 label.TotalBestScore = Total Best Score
 label.TotalBestScorePerSection = Total Best Score per Section
