ESURVEY-6733: Additional changes for self assessment results

--- a/src/main/webapp/WEB-INF/classes/messages_en.properties
+++ b/src/main/webapp/WEB-INF/classes/messages_en.properties
@@ -1614,7 +1614,8 @@ label.ECF.Competence = Competence
 label.ECF.AnswerScore = Answer Score
 label.ECF.Scores = Score (Gap)
 label.ECF.Target = Target score
-label.ECF.PleaseFindResults = Here are your results:
+label.ECF.SelfAssessmentResults = Self-Assessment results
+label.ECF.PleaseFindResults = Here is a comparison between your scores and the target scores for the selected profile:
 label.ECF.Average = Average score
 label.ECF.AverageTarget = Average target
 label.ECF.Max = Max
